# river-data-core

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
r_reference/: README.md  generate_fixtures.R  verify_integrity.R
r_reference/functions/: calcAFDM.R  calcAlt2BP.R  calcBenthicAFDM.R  calcCH4.R  calcCH4dry.R  calcCO2.R  calcCO2corr.R  calcChlaAcid.R  calcChlaNoAcid.R  calcChlaPerM2.R  calcDIC.R  calcDOC.R  calcDOCavg.R  calcDOCsd.R  calcEquals.R  calcMean.R  calcMinus.R  calcRatio.R  calcSUVA.R  calcSd.R  calcTSS.R  calcd13DIC.R  calcpCO2.R  calcpCO2P1.R  calcpCO2P2.R  convertToUnitPerM2.R
src/: commands.rs  crypto.rs  error.rs  lib.rs  models.rs
src/client/: control_plane.rs  mod.rs  river_data_client.rs  runner.rs
src/server/: middleware.rs  mod.rs  router.rs  state.rs
src/server/entity/: mod.rs  sync_commands.rs  sync_events.rs  sync_service_credentials.rs  sync_service_tokens.rs  sync_services.rs
src/server/handlers/: admin.rs  commands.rs  enroll.rs  events.rs  heartbeat.rs  mod.rs
src/toolbox/: alkalinity.rs  benthic.rs  chlorophyll.rs  co2_air.rs  common.rs  dic.rs  doc.rs  dom.rs  field_data.rs  ions.rs  isotopes.rs  mod.rs  nutrients.rs  pco2.rs  tss_afdm.rs
tests/: toolbox_golden.rs  toolbox_integration.rs
tests/fixtures/: chlorophyll.json  dic.json  doc.json  golden_values.json  ions.json  pco2.json  tss_afdm.json
